<resources>
    <string name="app_name">Monitoring Motor Listrik</string>

    <string name="halaman_login">Halaman Login</string>
    <string name="halaman_register">Halaman Register</string>
    <string name="halaman_lupapassword">Halaman Lupa Password</string>

    <string name="edittext_email">Email</string>
    <string name="edittext_password">Password</string>

    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="button_reset_password">Reset Password</string>

    <string name="txt_edittext_lupapassword">Lupa Password? Silahkan Klik Disini</string>

    <string name="edittext_nip">NIP</string>
    <string name="edittext_nama">Nama</string>
    <string name="edittext_alamat">Alamat</string>
    <string name="edittext_nohp">No HP</string>

    <string name="txt_pilih_foto">Klik Gambar Diatas Untuk Memilih Foto</string>
    <string name="title_activity_dashboard">MainActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_master">Master</string>
    <string name="title_report">Report</string>
    <string name="title_profil">Profil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="fragment_sudah_diperbaiki">Sudah Diperbaiki</string>
    <string name="fragment_belum_diperbaiki">Belum Diperbaiki</string>
    <string name="fragment_profil">Profil</string>
    <string name="content_description_end_icon">tes</string>



    <string-array name="jenis_dokumen">
        <item>PDF</item>
        <item>EXCEL</item>
    </string-array>

    <string-array name="statusaktivasi_user">
        <item>AKTIF</item>
        <item>TIDAKAKTIF</item>
    </string-array>

</resources>